# snip

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: run-tests.yml
plans/: sync.md
snip/: cli.py  config.py  models.py  search.py  storage.py  sync.py
tests/: test_cli.py  test_config.py  test_search.py  test_storage.py  test_sync.py
