[project]
name = "snip"
version = "0.1.0"
description = "CLI tool for storing and searching text snippets"
authors = [
    {name = "Andrew McIntosh",email = "andrew@amcintosh.net"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.3.1,<9.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[project.scripts]
snip = "snip.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
