[project]
name = "snip"
version = "0.1.0"
description = "CLI tool for storing and searching text snippets"
authors = [
    {name = "Andrew McIntosh",email = "andrew@amcintosh.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "flake8-pyproject>=1.2.4"
]

[project.scripts]
snip = "snip.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
count = true